--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   "dependencies": {
     "@devvit/web": "0.12.1",
     "devvit": "0.12.1",
-    "express": "5.1.0"
+    "express": "5.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/express": "5.0.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^4.7.0",
     "concurrently": "9.1.2",
     "dotenv-cli": "8.0.0",
     "typescript": "5.8.2",
