--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,21 +1,21 @@
-// TypeScript config for all web view main thread code.
 {
-  "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
-    // Target the browser.
-    "customConditions": ["browser"],
-
-    "lib": ["DOM", "ES2023", "esnext.disposable"],
-
-    "outDir": "../../dist/types/client",
-
-    // React
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "react-jsx",
-
-    "tsBuildInfoFile": "../../dist/types/client/tsconfig.tsbuildinfo"
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  // https://github.com/Microsoft/TypeScript/issues/25636
-  "include": ["**/*", "**/*.json", "vite.config.ts"],
-  "exclude": ["**/*.test.ts"],
-  "references": [{ "path": "../shared" }]
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["node_modules"]
 }
