--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,19 +1,24 @@
-// TypeScript config for all Devvit server code.
 {
-  "extends": "../../tools/tsconfig-base.json",
   "compilerOptions": {
-    "lib": ["ES2023"],
-
-    "types": ["node"],
-
-    "rootDir": ".",
-
-    "outDir": "../../dist/types/server",
-
-    "tsBuildInfoFile": "../../dist/types/server/tsconfig.tsbuildinfo"
+    "target": "ES2022",
+    "lib": [
+      "ES2022"
+    ],
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "types": [
+      "node"
+    ],
+    "skipLibCheck": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true
   },
-  // https://github.com/Microsoft/TypeScript/issues/25636
-  "include": ["**/*", "**/*.json", "../../package.json"],
-  "exclude": ["**/*.test.ts"],
-  "references": [{ "path": "../shared" }]
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
